// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SuccessPage component Approving / Rejecting a work order when variation is approved should render success screen with approved message 1`] = `
<DocumentFragment>
  <section
    class="text-align-center lbh-page-announcement"
  >
    <h3
      class="lbh-page-announcement__title"
    >
      You have approved a variation
    </h3>
    <div
      class="lbh-page-announcement__content"
    >
      <p>
        Work order number
      </p>
      <strong
        class="govuk-!-font-size-24"
      >
        10000012
      </strong>
    </div>
  </section>
  <ul
    class="lbh-list lbh-!-margin-top-9"
  >
    <li>
      <a
        class="lbh-link"
        href="/work-orders/10000012"
      >
        <strong>
          View work order
        </strong>
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/"
      >
        <strong>
          Manage work orders
        </strong>
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`SuccessPage component Approving / Rejecting a work order when variation is rejected should render success screen with rejected message 1`] = `
<DocumentFragment>
  <section
    class="text-align-center lbh-page-announcement"
  >
    <h3
      class="lbh-page-announcement__title"
    >
      You have rejected a variation
    </h3>
    <div
      class="lbh-page-announcement__content"
    >
      <p>
        Work order number
      </p>
      <strong
        class="govuk-!-font-size-24"
      >
        10000012
      </strong>
    </div>
  </section>
  <ul
    class="lbh-list lbh-!-margin-top-9"
  >
    <li>
      <a
        class="lbh-link"
        href="/work-orders/10000012"
      >
        <strong>
          View work order
        </strong>
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/"
      >
        <strong>
          Manage work orders
        </strong>
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`SuccessPage component Cancel a work order should render a success screen with confirmation text and 3 links: View work order, New repair link and Start a new search 1`] = `
<DocumentFragment>
  <div
    class="govuk-panel govuk-panel--confirmation lbh-panel"
  >
    <h1
      class="govuk-panel__title"
    >
      Repair work order cancelled
    </h1>
    <div
      class="govuk-panel__body"
    >
      <p>
        Work order number
      </p>
      <strong
        class="govuk-!-font-size-41"
      >
        10000012
      </strong>
    </div>
  </div>
  <ul
    class="lbh-list lbh-!-margin-top-9"
  >
    <li>
      <a
        class="lbh-link"
        href="/work-orders/10000012"
      >
        <strong>
          View work order
        </strong>
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/properties/12345678/raise-repair/new"
      >
        <strong>
          New repair for 12 Random Lane
        </strong>
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/"
      >
        <strong>
          Start a new search
        </strong>
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`SuccessPage component Close a work order should render a success screen with confirmation text and 2 links: View work order and Manage work orders 1`] = `
<DocumentFragment>
  <div
    class="govuk-panel govuk-panel--confirmation background-dark-green"
  >
    <div
      class="govuk-panel__body"
    >
      <strong>
        You have closed work order 10000012
      </strong>
    </div>
  </div>
  <ul
    class="lbh-list lbh-!-margin-top-9"
  >
    <li>
      <a
        class="lbh-link"
        href="/work-orders/10000012"
      >
        <strong>
          View work order
        </strong>
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/"
      >
        <strong>
          Manage work orders
        </strong>
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`SuccessPage component Raising a repair Above target date (over raise limit) authorisation should render a success screen with a warning message and link to raise new work order 1`] = `
<DocumentFragment>
  <section
    class="text-align-center lbh-page-announcement"
  >
    <h3
      class="lbh-page-announcement__title"
    >
      Repair work order created
    </h3>
    <div
      class="lbh-page-announcement__content"
    >
      <p>
        Work order number
      </p>
      <strong
        class="govuk-!-font-size-24"
      >
        10000012
      </strong>
    </div>
  </section>
  <div
    class="govuk-warning-text lbh-warning-text"
  >
    <span
      aria-hidden="true"
      class="govuk-warning-text__icon"
    >
      !
    </span>
    <strong
      class="govuk-warning-text__text"
    >
      <span
        class="govuk-warning-text__assistive"
      >
        Warning
      </span>
      Work order 10000012 requires authorisation. Please request authorisation from a manager.
    </strong>
  </div>
  <ul
    class="lbh-list lbh-!-margin-top-9"
  >
    <li>
      <a
        class="lbh-link"
        href="/work-orders/10000012"
      >
        <strong>
          View work order
        </strong>
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/properties/12345678"
      >
        <strong>
          Back to 12 Random Lane
        </strong>
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/"
      >
        <strong>
          Start a new search
        </strong>
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/properties/12345678/raise-repair/new"
      >
        <strong>
          Raise a new work order
        </strong>
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`SuccessPage component Raising a repair High cost (over raise limit) authorisation should render a success screen with a warning message 1`] = `
<DocumentFragment>
  <section
    class="text-align-center lbh-page-announcement"
  >
    <h3
      class="lbh-page-announcement__title"
    >
      Repair work order created
    </h3>
    <div
      class="lbh-page-announcement__content"
    >
      <p>
        Work order number
      </p>
      <strong
        class="govuk-!-font-size-24"
      >
        10000012
      </strong>
    </div>
  </section>
  <div
    class="govuk-warning-text lbh-warning-text"
  >
    <span
      aria-hidden="true"
      class="govuk-warning-text__icon"
    >
      !
    </span>
    <strong
      class="govuk-warning-text__text"
    >
      <span
        class="govuk-warning-text__assistive"
      >
        Warning
      </span>
      Work order 10000012 requires authorisation. Please request authorisation from a manager.
    </strong>
  </div>
  <ul
    class="lbh-list lbh-!-margin-top-9"
  >
    <li>
      <a
        class="lbh-link"
        href="/work-orders/10000012"
      >
        <strong>
          View work order
        </strong>
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/properties/12345678"
      >
        <strong>
          Back to 12 Random Lane
        </strong>
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/"
      >
        <strong>
          Start a new search
        </strong>
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`SuccessPage component Raising a repair With Emergency and Immediate DLO repairs text should render text that Emergency and immediate DLO repairs are sent directly to the Planners 1`] = `
<DocumentFragment>
  <section
    class="text-align-center lbh-page-announcement"
  >
    <h3
      class="lbh-page-announcement__title"
    >
      Repair work order created
    </h3>
    <div
      class="lbh-page-announcement__content"
    >
      <p>
        Work order number
      </p>
      <strong
        class="govuk-!-font-size-24"
      >
        10000012
      </strong>
    </div>
  </section>
  <ul
    class="lbh-list lbh-!-margin-top-9"
  >
    <li>
      <p>
        <strong>
          Emergency and immediate DLO repairs are sent directly to the Planners. An appointment does not need to be booked.
        </strong>
      </p>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/work-orders/10000012"
      >
        <strong>
          View work order
        </strong>
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/properties/12345678"
      >
        <strong>
          Back to 12 Random Lane
        </strong>
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/"
      >
        <strong>
          Start a new search
        </strong>
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`SuccessPage component Raising a repair With an external scheduler URL should render text with a link to schedule externally 1`] = `
<DocumentFragment>
  <section
    class="text-align-center lbh-page-announcement"
  >
    <h3
      class="lbh-page-announcement__title"
    >
      Repair work order created
    </h3>
    <div
      class="lbh-page-announcement__content"
    >
      <p>
        Work order number
      </p>
      <strong
        class="govuk-!-font-size-24"
      >
        10000012
      </strong>
    </div>
  </section>
  <ul
    class="lbh-list lbh-!-margin-top-9"
  >
    <li>
      <a
        class="lbh-link"
        href="/work-orders/10000012"
      >
        <strong>
          View work order
        </strong>
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/properties/12345678"
      >
        <strong>
          Back to 12 Random Lane
        </strong>
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/"
      >
        <strong>
          Start a new search
        </strong>
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`SuccessPage component Raising a repair Within raise limit should render a success screen without a warning message 1`] = `
<DocumentFragment>
  <section
    class="text-align-center lbh-page-announcement"
  >
    <h3
      class="lbh-page-announcement__title"
    >
      Repair work order created
    </h3>
    <div
      class="lbh-page-announcement__content"
    >
      <p>
        Work order number
      </p>
      <strong
        class="govuk-!-font-size-24"
      >
        10000012
      </strong>
    </div>
  </section>
  <ul
    class="lbh-list lbh-!-margin-top-9"
  >
    <li>
      <a
        class="lbh-link"
        href="/work-orders/10000012"
      >
        <strong>
          View work order
        </strong>
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/properties/12345678"
      >
        <strong>
          Back to 12 Random Lane
        </strong>
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/"
      >
        <strong>
          Start a new search
        </strong>
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`SuccessPage component Update a work order does not require authorisation 1`] = `
<DocumentFragment>
  <div
    class="govuk-panel govuk-panel--confirmation background-dark-green"
  >
    <div
      class="govuk-panel__body"
    >
      <strong>
        Work order 10000012 has been successfully updated
      </strong>
    </div>
  </div>
  <ul
    class="lbh-list lbh-!-margin-top-9"
  >
    <li>
      <a
        class="lbh-link"
        href="/work-orders/10000012"
      >
        <strong>
          View work order
        </strong>
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/work-orders/10000012/close"
      >
        <strong>
          Close work order
        </strong>
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/"
      >
        <strong>
          Manage work orders
        </strong>
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`SuccessPage component Update a work order requires authorisation 1`] = `
<DocumentFragment>
  <div
    class="govuk-panel govuk-panel--confirmation background-yellow"
  >
    <div
      class="govuk-panel__body text-black"
    >
      <strong>
        Work order 10000012 requires authorisation and has been sent to a manager
      </strong>
    </div>
  </div>
  <ul
    class="lbh-list lbh-!-margin-top-9"
  >
    <li>
      <a
        class="lbh-link"
        href="/work-orders/10000012"
      >
        <strong>
          View work order
        </strong>
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/work-orders/10000012/close"
      >
        <strong>
          Close work order
        </strong>
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/"
      >
        <strong>
          Manage work orders
        </strong>
      </a>
    </li>
  </ul>
</DocumentFragment>
`;
